--- a/i_talks.html
+++ b/i_talks.html
@@ -46,6 +46,19 @@
 <h1>Future Talks</h1>
 
 <p>
+<a href="https://sites.google.com/view/iccopt2025/home">2025 International Conference on Continuous Optimization (ICCOPT 2025)</a>, The University of Southern California, Los Angeles, USA, July 19-24, 2025
+</p>
+
+<p>
+<a href="https://icomp.cc">International Conference on Computational Optimization (ICOMP-2024)</a>, Innopolis, Russian Federation, October 10-12, 2024 (plenary talk delivered virtually)
+</p>
+
+<p>
+AMCS/STAT Graduate Seminar, KAUST, Saudi Arabia,
+September 5, 2024
+</p>
+
+<p>
 Tools for AI and Data Science (ALGOPT 2024), Louvain-la-Neuve, Belgium, August 27-30, 2024. The workshop is a celebration of Yurii Nesterov's 50 year long research career in optimization!
 </p>
 
@@ -188,12 +201,12 @@ for Mathematical Sciences, National University of Singapore, Singapore, December
 
 <p>
 [220]
-Introduction to Optimization 2/2, Aramco, November 17-20, 2022 (24 hours)
+Introduction to Optimization 2/2, Aramco, Saudi Arabia, November 17-20, 2022 (24 hours)
 </p>
 
 <p>
 [219]
-KAUST Workshop on Scientific Computing and Machine Learning, KAUST, November 14, 2022 [<a href="talks/TALK-2022-11-14-SCML-Workshop.pdf">slides</a>] (invited by Jinacho Xu)
+KAUST Workshop on Scientific Computing and Machine Learning, KAUST, Saudi Arabia, November 14, 2022 [<a href="talks/TALK-2022-11-14-SCML-Workshop.pdf">slides</a>] (invited by Jinacho Xu)
 </p>
 
 <p>
@@ -294,11 +307,11 @@ talks by: Peter Richtarik, Aymeric Dieuleveut, Mehryar Mohri, Eduard Gorbunov, M
 </p>
 
 <p>
-[199] <a href="https://cemse.kaust.edu.sa/events/event/proxskip-yes-local-gradient-steps-provably-lead-communication-acceleration-finally">AMCS/STAT Graduate Seminar</a>, KAUST, March 31, 2022 (invited)
+[199] <a href="https://cemse.kaust.edu.sa/events/event/proxskip-yes-local-gradient-steps-provably-lead-communication-acceleration-finally">AMCS/STAT Graduate Seminar</a>, KAUST, Saudi Arabia, March 31, 2022 (invited)
 </p>
 
 <p>
-[198] <a href="https://cemse.kaust.edu.sa/events/event/permutation-compressors-provably-faster-distributed-nonconvex-optimization">Computer Science Graduate Seminar</a>, KAUST, March 21, 2022 (invited)
+[198] <a href="https://cemse.kaust.edu.sa/events/event/permutation-compressors-provably-faster-distributed-nonconvex-optimization">Computer Science Graduate Seminar</a>, KAUST, Saudi Arabia, March 21, 2022 (invited)
 </p>
 
 <p>
@@ -352,7 +365,7 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership"</a>, virtual,
 </p>
 
 <p>
-[186] <a href="https://cemse.kaust.edu.sa/events/event/ef21-new-simpler-theoretically-better-and-practically-faster-error-feedback">Computer Science Graduate Seminar</a>, KAUST, November 1, 2021 (invited)
+[186] <a href="https://cemse.kaust.edu.sa/events/event/ef21-new-simpler-theoretically-better-and-practically-faster-error-feedback">Computer Science Graduate Seminar</a>, KAUST, Saudi Arabia, November 1, 2021 (invited)
 </p>
 
 <p>
@@ -394,7 +407,7 @@ in Conjunction with ICML 2021 (FL-ICML'21)</a>, virtual, July 24, 2021 (co-organ
 </p>
 
 <p>
-[176] AMCS/STAT Graduate Seminar, KAUST, April 22, 2021 (invited)
+[176] AMCS/STAT Graduate Seminar, KAUST, Saudi Arabia, April 22, 2021 (invited)
 </p>
 
 <p>
@@ -458,7 +471,7 @@ Talk "On Second Order Methods and Randomness" @ One World Optimization Seminar, 
 
 <p>
 [165]
-<a href="https://www.kaust.edu.sa/aiworkshop/index.html">KAUST-Tsinghua-Industry workshop on AI</a>, KAUST, December 23-26, 2019 (invited)
+<a href="https://www.kaust.edu.sa/aiworkshop/index.html">KAUST-Tsinghua-Industry workshop on AI</a>, KAUST, Saudi Arabia, December 23-26, 2019 (invited)
 </p>
 
 <p>[164] "Distributed and Federated Learning", Huawei, Nizhny
@@ -559,7 +572,7 @@ including one workshop paper)
 
 <p>
 [150] <a
-href="https://stat.kaust.edu.sa/calender/Pages/Page-2018-03-14_11-12-20-AM.aspx">Statistics and Data Science Workshop</a>, KAUST, Thuwal, KSA,
+href="https://stat.kaust.edu.sa/calender/Pages/Page-2018-03-14_11-12-20-AM.aspx">Statistics and Data Science Workshop</a>, KAUST, Thuwal, Saudi Arabia, 
 November 12-15, 2018 (invited)
 </p>
 
@@ -610,18 +623,18 @@ seminar</a>, Warwick, UK, May 1, 2018 (invited)</p>
 
 <p> [141] Mini-course "Introduction to Optimization for
 Machine Learning" for selected Saudi university students who previously participated in the
-<a href="https://en.wikipedia.org/wiki/KFUPM_mathematics_olympiad">Saudi National Mathematical Olympiad</a> or IMO, KAUST, KSA,
+<a href="https://en.wikipedia.org/wiki/KFUPM_mathematics_olympiad">Saudi National Mathematical Olympiad</a> or IMO, KAUST, Saudi Arabia, 
 April 25-26, 2018
 </p>
 
 <p>
 [140]
-<a href="https://cemse.kaust.edu.sa/events/Pages/CS-Graduate-Seminar-Randomized-projection-methods-for-convex-feasibility-problems-102537.aspx">CS Graduate Seminar,</a> KAUST, KSA, March 16, 2018 (invited)
+<a href="https://cemse.kaust.edu.sa/events/Pages/CS-Graduate-Seminar-Randomized-projection-methods-for-convex-feasibility-problems-102537.aspx">CS Graduate Seminar,</a> KAUST, Saudi Arabia,  March 16, 2018 (invited)
 </p>
 
 <p>
 [139]
-<a href="https://cemse.kaust.edu.sa/events/Pages/Events.aspx">AMCS/Statistics Graduate Seminar</a>, KAUST, KSA, March 8, 2018 (invited)
+<a href="https://cemse.kaust.edu.sa/events/Pages/Events.aspx">AMCS/Statistics Graduate Seminar</a>, KAUST, Saudi Arabia, March 8, 2018 (invited)
 </p>
 
 <p>
@@ -714,8 +727,7 @@ href="https://vcc.kaust.edu.sa/Conference-2017/Pages/default.aspx"><br>
 </a></p>
 
 <p>[126] <a
-href="https://vcc.kaust.edu.sa/Conference-2017/Pages/default.aspx">Visual Computing - Modeling and Reconstruction</a>, KAUST
-Conference Center, Thuwal, Saudi Arabia, April 10-12, 2017
+href="https://vcc.kaust.edu.sa/Conference-2017/Pages/default.aspx">Visual Computing - Modeling and Reconstruction</a>, KAUST, Thuwal, Saudi Arabia, April 10-12, 2017
 (invited) [<a href="talks/TALK-SPDHG.pdf">slides</a>] </p>
 
 <p>[125] <a href="http://www.baspfrontiers.org/">2017 BASP
