--- a/i_team.html
+++ b/i_team.html
@@ -74,14 +74,6 @@
               <a href="https://scholar.google.com/citations?user=CDENSiUAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
-            <li><a href="https://avetx.github.io/">Avetik Karagulyan</a> (11/2021-present), KAUST
-              <a href="https://scholar.google.com/citations?hl=en&user=1-_KDtoAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
-
-            <li><a href="https://k3nfalt.github.io">Alexander Tyurin</a> (7/2021-present), KAUST
-              <a href="https://scholar.google.com/citations?hl=en&user=Es8-xocAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
-
           </ul>
 
 
@@ -211,6 +203,16 @@
 
 
           <ul>
+          
+            <li><a href="https://avetx.github.io/">Avetik Karagulyan</a> (11/2021-7/2024), KAUST
+              <a href="https://scholar.google.com/citations?hl=en&user=1-_KDtoAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+              <i>next position: Research Assistant Professor, UC Davis, USA</i>
+            </li>
+
+            <li><a href="https://k3nfalt.github.io">Alexander Tyurin</a> (7/2021-7/2024), KAUST
+              <a href="https://scholar.google.com/citations?hl=en&user=Es8-xocAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+              <i>next position: Research Group Leader, AI Research Institute (AIRI), Moscow, Russia</i>              
+            </li>          
           
             <li><a href="https://sarit-khirirat.netlify.app">Sarit Khirirat</a> (9/2022-9/2023), MBZUAI
               <a href="https://scholar.google.se/citations?user=NSFBRNAAAAAJ&hl=en"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
