--- a/i_papers.html
+++ b/i_papers.html
@@ -220,7 +220,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
     
 [231] Eduard Gorbunov, Abdurakhmon Sadiev, Marina Danilova, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov, and Peter Richtárik<br>          
 <b>High-probability convergence for composite and distributed stochastic minimization and variational inequalities with heavy-tailed noise</b><br>
-41st International Conference on Machine Learning (ICML 2024) <span class="important">Oral</span><br>     
+41st International Conference on Machine Learning (ICML 2024) <span class="important">Oral (144/9473 = top 1.5\%)</span><br>     
 [<a href="https://arxiv.org/abs/2310.01860">arXiv</a>] [method: DProx-clipped-SGD-shift, DProx-clipped-SSTM-shift]       
 <br> <br> 
           
