--- a/i_talks.html
+++ b/i_talks.html
@@ -50,7 +50,11 @@
 </p>
 
 <p>
- The Machine Learning Summer School (MLSS 2025), MBour, Senegal, Summer 2025 (invited lecturer)
+3rd Workshop on Computational Optimization, Vienna, Austria, June 4-6, 2025 (invited by Radu Bot)
+</p>
+
+<p>
+The Machine Learning Summer School (MLSS 2025), MBour, Senegal, Summer 2025 (invited lecturer)
 </p>
 
 
@@ -63,12 +67,10 @@ AMCS/STAT Graduate Seminar, KAUST, Saudi Arabia, September 5, 2024
 </p>
 
 <p>
-Tools for AI and Data Science (ALGOPT 2024), Louvain-la-Neuve, Belgium, August 27-30, 2024. The workshop is a celebration of Yurii Nesterov's 50 year long research career in optimization!
+<a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, Louvain-la-Neuve, Belgium, August 27-30, 2024. The workshop is a celebration of Yurii Nesterov's 50 year long research career in optimization! (invited)
 </p>
 
-<p>
-<a href="https://icml.cc/Conferences/2024">ICML</a>, Vienna, Austria, July 21-27, 2024
-</p>
+
 
 
 <!-- <p>
@@ -90,10 +92,15 @@ Tools for AI and Data Science (ALGOPT 2024), Louvain-la-Neuve, Belgium, August 2
 
 <h1>2024 Talks</h1>
 
+<!--
+<p>
+<a href="https://icml.cc/Conferences/2024">ICML</a>, Vienna, Austria, July 21-27, 2024
+</p>
+!-->
+
 <p>
 [241]
-<a href="https://fedvision.github.io/fedvision2024/">3rd Workshop on Federated Learning for
-Computer Vision (in Conjunction with CVPR 2024)</a>, Seattle, USA, June 17, 2024 (keynote talk)
+<a href="https://fedvision.github.io/fedvision2024/">3rd Workshop on Federated Learning for Computer Vision (in Conjunction with CVPR 2024)</a>, Seattle, USA, June 17, 2024 (keynote talk)
 </p>
 
 <p>
