--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <h1>A keynote talk: FedVision @ CVPR 2024</h1>
 
-I giving a keynote talk at the <a href="https://fedvision.github.io/fedvision2024/">Federated Learning for Computer Vision (FedVision) Workshop</a> at <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR 2024</a> today. The conference is held in Seattle, during June 17--21.  <br>
+I am giving a keynote talk at the <a href="https://fedvision.github.io/fedvision2024/">Federated Learning for Computer Vision (FedVision) Workshop</a> at <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR 2024</a> today. The conference is held in Seattle, during June 17--21.  <br>
 
 
 <br>
