--- a/i_talks.html
+++ b/i_talks.html
@@ -57,13 +57,16 @@
 The Machine Learning Summer School (MLSS 2025), MBour, Senegal, Summer 2025 (invited lecturer)
 </p>
 
-
 <p>
 <a href="https://icomp.cc">International Conference on Computational Optimization (ICOMP-2024)</a>, Innopolis, Russian Federation, October 10-12, 2024 (plenary talk delivered virtually)
 </p>
 
 <p>
 AMCS/STAT Graduate Seminar, KAUST, Saudi Arabia, September 5, 2024
+</p>
+
+<p>
+CS Graduate Seminar, KAUST, Saudi Arabia, September 2, 2024
 </p>
 
 <p>
