--- a/i_team.html
+++ b/i_team.html
@@ -113,10 +113,6 @@
               <a href="https://scholar.google.com/citations?hl=en&user=XlmSx18AAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
-            <li><a href="https://lukangsun.github.io">Lukang Sun</a> (3/2021-present), KAUST
-              <a href="https://scholar.google.com/citations?hl=en&user=hBbg20cAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
-
             <li><a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a> (8/2020-present), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=3pA-LoQAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
@@ -285,6 +281,11 @@
 
 
           <ul>
+          
+            <li><a href="https://lukangsun.github.io">Lukang Sun</a> (3/2021-7/2024), KAUST
+              <a href="https://scholar.google.com/citations?hl=en&user=hBbg20cAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+               <i>next position: Postdoctoral Fellow, TUM, Munich, Germany</i>                  
+            </li>          
           
             <li><a href="https://slavomir-hanzely.github.io">Slavomír Hanzely</a> (1/2021-12/2023), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=ksqGMoEAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
