--- a/index.html
+++ b/index.html
@@ -42,6 +42,45 @@
       </ul>
       <div id="wrapper" class="main">
         <div id="content">
+
+
+
+<h3>August 26, 2024</h3>
+
+<h1>ICML 2024 in Vienna</h1>
+
+I am on my way to Belgium to attend
+the  <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 workshop on
+Algorithmic Optimization: Tools for AI and Data Science</a>, held at UCLouvain
+during August 27-30, 2024. The conference is a celebration of Yurii Nesterov's 50 years 
+anniversary of doing research in optimization.
+
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>July 21, 2024</h3>
+
+<h1>ICML 2024 in Vienna</h1>
+
+During July 21-27, I am attending the <a href="https://icml.cc/Conferences/2024">ICML 2024</a> conference held in Vienna.  <br>
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
         
 <h3>June 17, 2024</h3>
 
