--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
 
 <h3>August 26, 2024</h3>
 
-<h1>ICML 2024 in Vienna</h1>
+<h1>Celebrating Nesterov's 50 Years of Research</h1>
 
 I am on my way to Belgium to attend
 the  <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 workshop on
 Algorithmic Optimization: Tools for AI and Data Science</a>, held at UCLouvain
 during August 27-30, 2024. The conference is a celebration of Yurii Nesterov's 50 years 
-anniversary of doing research in optimization.
+anniversary of doing research in optimization. I am giving my talk on the first day of the event. It will be super nice to reconnect
+with many friends and colleagues. 
 
 
 <br> 
