--- a/i_talks.html
+++ b/i_talks.html
@@ -62,6 +62,10 @@ The Machine Learning Summer School (MLSS 2025), MBour, Senegal, Summer 2025 (inv
 </p>
 
 <p>
+<a href="https://flta-conference.org">2nd IEEE International Conference on Federated Learning Technologies and Applications (FLTA 2024)</a>,  September 17-20, 2024, Valencia, Spain (keynote talk)
+</p>
+
+<p>
 AMCS/STAT Graduate Seminar, KAUST, Saudi Arabia, September 5, 2024
 </p>
 
@@ -69,9 +73,7 @@ AMCS/STAT Graduate Seminar, KAUST, Saudi Arabia, September 5, 2024
 CS Graduate Seminar, KAUST, Saudi Arabia, September 2, 2024
 </p>
 
-<p>
-<a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, Louvain-la-Neuve, Belgium, August 27-30, 2024. The workshop is a celebration of Yurii Nesterov's 50 year long research career in optimization! (invited)
-</p>
+
 
 
 
@@ -94,6 +96,12 @@ CS Graduate Seminar, KAUST, Saudi Arabia, September 2, 2024
 
 
 <h1>2024 Talks</h1>
+
+
+<p>
+[242]
+<a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, Louvain-la-Neuve, Belgium, August 27-30, 2024. The workshop is a celebration of Yurii Nesterov's 50 year long research career in optimization! (invited)
+</p>
 
 <!--
 <p>
