CS Seminar Talk

--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
 
 
 
+<h3>September 2, 2024</h3>
+
+<h1>CS Graduate Seminar Talk</h1>
+
+Today at noon I am giving a talk at the Computer Science Graduate Seminar here at KAUST. Location: Building 9, Level 2, Room 2325. The talk title is: "The First Optimal Parallel SGD (in the Presence of Data, Compute and Communication Heterogeneity)".
+
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>August 26, 2024</h3>
 
 <h1>Celebrating Nesterov's 50 Years of Research</h1>
