AMCS/STAT seminar talk

--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
 
 
 
+<h3>September 4, 2024</h3>
+
+<h1>AMCS/STAT Graduate Seminar Talk</h1>
+
+Tomorrow (Sept 5) at noon I am giving a talk at the AMCS/STAT Graduate Seminar here at KAUST: <a href="https://cemse.kaust.edu.sa/amcs/events/event/first-optimal-parallel-stochastic-gradient-descent">Location: Building 9, Level 2, Room 2325.</a> The talk title is: "The First Optimal Parallel SGD (in the Presence of Data, Compute and Communication Heterogeneity)". This is the same talk as the one I gave two days ago here at KAUST to CS audience, but this time around the audience is composed of mathematics and statistics people. 
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
 <h3>September 2, 2024</h3>
 
 <h1>CS Graduate Seminar Talk</h1>
