--- a/i_join.html
+++ b/i_join.html
@@ -78,7 +78,7 @@
 
           Internships are targeted at senior/mature undergraduate or MS students thinking of a future career in research
           (e.g., considering to  apply for a PhD at KAUST or elsewhere). Prior experience in research is welcome, but not necessary.
-          Internships last anywhere between a month and six months, and can be  performed  on the campus or remotely. Extension migh be possible in
+          Internships last anywhere between a month and six months, and can be  performed  on the campus or remotely. Extension might be possible in
           special cases. The starting date and duration are negotiable. Internships come with a monthly stipend. In case of on-campus internships,
           we also reimburse your visa fees, book your flight tickets and taxi (between the airport in Jeddah and the campus), offer free on-campus
           accommodation and provide health insurance.
@@ -86,8 +86,8 @@
 
           If I decide to make you an offer, I will tell you which
           of KAUST's several internship programs you will be formally a part of. They all have
-          different rules and eligibilty requirements. However, you need not worry about it.
-          All you need to do is to apply via the interfolio site (see the link above) and wait.
+          different rules and eligibility requirements. However, you need not worry about it.
+          All you need to do is to apply via the <a href="https://apply.interfolio.com/105097">interfolio site</a>  and wait.
           <br><br>
 
           KAUST has several internship programs, including:
@@ -130,23 +130,16 @@
 
 
 
-
-
-
-
           <h1>MS/PhD and PhD positions</h1>
 
           If you have a BS degree, apply to our combined MS/PhD program.
-          If all goes well, you will get an MS degree in 1.5 years (3
-          semesters), and will then continue towards your PhD. So, if
-          you start in August in year Y, you will get your MS degree in
-          December in year Y+1, and will continue as a PhD student from
-          January of year Y+2. If you have an MS degree already, apply
-          directly to the PhD program. If you are from Europe or North America, I recommend that you also apply
-          for the <a href="https://admissions.kaust.edu.sa/Discovery_Fellowship.html">European Science Foundation KAUST Discovery Fellowship</a> -
+          If all goes well, you will get an MS degree in 1.5 years (3 semesters), and will then continue towards your PhD. So, if you start in August in year Y, you will get your MS degree in December in year Y+1, and will continue as a PhD student from January of year Y+2. If you have an MS degree already, apply directly to the PhD program.           
+          <!--- If you are from Europe or North America, I recommend that you also apply
+          for the 
+          <a href="https://admissions.kaust.edu.sa/Discovery_Fellowship.html">European Science Foundation KAUST Discovery Fellowship</a> -
           this is more prestigious than the standard KAUST Fellowship.
-          PhD at KAUST takes a minimum of
-          2.5 years. We accept students for entry in Fall (August) and
+          !--->          
+          PhD at KAUST takes a minimum of 2.5 years. We accept students for entry in Fall (August) and
           Spring (January). However, most students start in the Fall.
           There are several application rounds throughout the year, and
           hence you can essentially apply at any time. <a
@@ -161,8 +154,13 @@
           (Electrical and Computer Engineering) and <a
             href="https://cemse.kaust.edu.sa/stat">STAT</a>
           (Statistics). My current students study in all of these
-          programs except for ECE. If you have any questions about studies at KAUST, and want to ask a current student,
-          feel free to make use of the <a href="https://cemse.kaust.edu.sa/ask-a-student">KAUST Ask a Student</a> system. <br>
+          programs except for ECE. 
+          
+          <!--- If you have any questions about studies at KAUST, and want to ask a current student,
+          feel free to make use of the <a href="https://cemse.kaust.edu.sa/ask-a-student">KAUST Ask a Student</a> system. 
+          !--->
+                    
+          <br>                    
           <br>
 
 
