new paper - L0L1 methods

--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
 
 <h1> Prepared in 2024 </h1>
 
+[259] 
+Eduard Gorbunov, Nazarii Tupitsa, Sayantan Choudhury, Alen Aliev, Peter Richtárik, Samuel Horváth, and Martin Takáč<br>
+<b>Methods for convex $(L_0,L_1)$-smooth optimization: clipping, acceleration, and adaptivity</b><br>
+[<a href="https://arxiv.org/abs/2409.14989">arXiv</a>] [method: L0L1-GD, L0L1-GD-PS, L0L1-STM, L0L1-AdGD, L0L1-SGD, L0L1-SGD-PS] <br><br> 
+
 [258] 
 Kai Yi, Timur Kharisov, Igor Sokolov, and Peter Richtárik<br>
 <b>Cohort squeeze: Beyond a single communication round per cohort in cross-device federated learning</b><br>
