--- a/i_papers.html
+++ b/i_papers.html
@@ -96,7 +96,7 @@ Peter Richtárik, Simone Maria Giancola, Dymitr Lubczyk, and Robin Yadav<br>
 [253] 
 Alexander Tyurin and Peter Richtárik<br>
 <b>On the optimal time complexities in decentralized stochastic asynchronous optimization</b><br>
-Advances in Neural Information Processing Systems 37 (NeurIPS 2024)</a> <br>
+Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 <span class="important">Asynchronous Optimization</span><br> 
 [<a href="https://arxiv.org/abs/2405.16218">arXiv</a>] [method: Fragile SGD, Amelie SGD] <br><br> 
 
@@ -108,21 +108,21 @@ Peter Richtárik, Abdurakhmon Sadiev, and Yury Demidovich<br>
 [251] 
 Ionut-Vlad Modoranu, Mher Safaryan, Grigory Malinovsky, Eldar Kurtic, Thomas Robert, Peter Richtárik, and Dan Alistarh<br>
 <b>MicroAdam: Accurate adaptive optimization with low space overhead and provable convergence</b><br>
-Advances in Neural Information Processing Systems 37 (NeurIPS 2024)</a> <br>
+Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 <span class="important">LLM Paper</span><br>   
 [<a href="https://arxiv.org/abs/2405.15593">arXiv</a>] [method: MicroAdam] <br><br> 
 
 [250] 
 Alexander Tyurin, Kaja Gruntkowska, and Peter Richtárik<br>
 <b>Freya PAGE: First optimal time complexity for large-scale nonconvex finite-sum optimization with heterogeneous asynchronous computations</b><br>
-Advances in Neural Information Processing Systems 37 (NeurIPS 2024)</a> <br>
+Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 <span class="important">Asynchronous Optimization</span><br>   
 [<a href="https://arxiv.org/abs/2405.15545">arXiv</a>] [method: Freya PAGE, Freya SGD] <br><br> 
 
 [249] 
 Vladimir Malinovskii, Denis Mazur, Ivan Ilin, Denis Kuznedelev, Konstantin Burlachenko, Kai Yi, Dan Alistarh, and Peter Richtárik<br>
 <b>PV-Tuning: Beyond straight-through estimation for extreme LLM compression</b><br>
-Advances in Neural Information Processing Systems 37 (NeurIPS 2024)</a> <br>
+Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 <span class="important">Oral at NeurIPS 2024 (0.4\% acceptance rate)</span><br>   
 <span class="important">LLM Paper</span><br>   
 [<a href="https://arxiv.org/abs/2405.14852">arXiv</a>] [method: PV] <br><br> 
@@ -135,7 +135,7 @@ Abdurakhmon Sadiev, Laurent Condat, and Peter Richtárik<br>
 [247] 
 Hanmin Li, Kirill Acharya, and Peter Richtárik<br>
 <b>The power of extrapolation in federated learning</b><br>
-Advances in Neural Information Processing Systems 37 (NeurIPS 2024)</a> <br>
+Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 <span class="important">Federated Learning Paper</span><br>   
 [<a href="https://arxiv.org/abs/2405.13766">arXiv</a>] [method: FedExProx, FedExProx-GraDS, FedExProx-StoPS] <br><br> 
 
@@ -159,7 +159,7 @@ Laurent Condat, Artavazd Maranjyan, and Peter Richtárik<br>
 [243] 
 Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik<br>
 <b>Improving the worst-case bidirectional communication complexity for nonconvex distributed optimization under function similarity</b><br>
-Advances in Neural Information Processing Systems 37 (NeurIPS 2024)</a> <br>
+Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 <span class="important">Spotlight at NeurIPS 2024</span><br>   
 <span class="important">Federated Learning Paper</span><br>          
 [<a href="https://arxiv.org/abs/2402.06412">arXiv</a>] [method: MARINA-P, M3] <br><br> 
@@ -167,7 +167,7 @@ Advances in Neural Information Processing Systems 37 (NeurIPS 2024)</a> <br>
 [242] 
 Alexander Tyurin, Marta Pozzi, Ivan Ilin, and Peter Richtárik<br>
 <b>Shadowheart SGD: Distributed asynchronous SGD with optimal time complexity under arbitrary computation and communication heterogeneity</b><br>
-Advances in Neural Information Processing Systems 37 (NeurIPS 2024)</a> <br>
+Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 <span class="important">Asynchronous Optimization</span><br>         
 [<a href="https://arxiv.org/abs/2402.04785">arXiv</a>] [method: Shadowheart SGD] <br><br> 
 
@@ -217,7 +217,7 @@ Yury Demidovich, Grigory Malinovsky, Egor Shulgin, and Peter Richtárik<br>
 [235] 
 Grigory Malinovsky, Peter Richtárik, Samuel Horváth, and Eduard Gorbunov<br>          
 <b>Byzantine robustness and partial participation can be achieved simultaneously: just clip gradient differences</b><br>
-Advances in Neural Information Processing Systems 37 (NeurIPS 2024)</a> <br>
+Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
           <span class="important">Federated Learning Paper</span><br> 
 [<a href="https://arxiv.org/abs/2311.14127">arXiv</a>]    [method: Byz-VR-MARINA-PP]       
 <br> <br> 
@@ -465,8 +465,8 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           <br>
 
           [197] Abdurakhmon Sadiev, Grigory Malinovsky, Eduard Gorbunov, Igor Sokolov, Ahmed Khaled, Konstantin Burlachenko and Peter Richtárik <br>
-          <b>Federated optimization algorithms with random reshuffling and gradient compression</b><br>       
-Advances in Neural Information Processing Systems 37 (NeurIPS 2024)</a> <br>          
+          <b>Don't compress gradients in random reshuffling: compress gradient differences</b><br>       
+Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>          
           <a href="https://fl-icml2023.github.io">Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities (ICML 2023 Workshop) </a> <br>          
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.07021">arXiv</a>] [method: Q-RR, DIANA-RR, Q-NASTYA, DIANA-NASTYA] [<a href="posters/Poster-4QQ.pdf">poster</a>] <br>
