--- a/index.html
+++ b/index.html
@@ -44,6 +44,116 @@
         <div id="content">
 
 
+
+<h3>October 4, 2024</h3>
+<h1>Papers Accepted to NeurIPS 2024</h1>
+<br>
+We've had several papers accepted to the <a href="https://nips.cc/Conferences/2024">38th Annual Conference on Neural Information Processing Systems (NeurIPS 2024)</a>, which will run during December 10-December 15, 2024 in Vancouver, Canada.
+
+<br><br>
+
+
+<b> 1) "PV-Tuning: Beyond Straight-Through Estimation for Extreme LLM Compression" </b><br>
+<a href="https://arxiv.org/abs/2405.14852">[arXiv]</a> <br>
+by Vladimir Malinovskii, Denis Mazur, Ivan Ilin, Denis Kuznedelev, Konstantin Burlachenko, Kai Yi, Dan Alistarh, and Peter Richtárik<br>
+<span class="important">Oral (0.4% acceptance rate)</span><br>  
+<br>
+
+<b> 2) "Improving the Worst-Case Bidirectional Communication Complexity for Nonconvex Distributed Optimization under Function Similarity"</b><br>
+<a href="https://arxiv.org/abs/2402.06412">[arXiv]</a> <br>
+by Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik.
+<br>
+<span class="important">Spotlight</span><br>  
+<br>
+
+<b> 3) "On the Optimal Time Complexities in Decentralized Stochastic Asynchronous Optimization"</b> <br>
+<a href="https://arxiv.org/abs/2405.16218">[arXiv]</a>  <br>
+by Alexander Tyurin and Peter Richtárik.<br>
+<span class="important">Poster</span><br>  
+<br>
+
+<b> 4) "Shadowheart SGD: Distributed Asynchronous SGD with Optimal Time Complexity Under Arbitrary Computation and Communication Heterogeneity"</b><br>
+<a href="https://arxiv.org/abs/2402.04785">[arXiv]</a>  <br>
+by Alexander Tyurin, Marta Pozzi, Ivan Ilin, and Peter Richtárik
+<br>
+<span class="important">Poster</span><br>  
+<br>
+
+<b> 5) "MicroAdam: Accurate Adaptive Optimization with Low Space Overhead and Provable Convergence"</b><br>
+<a href="https://arxiv.org/abs/2405.15593">[arXiv]</a>  <br>
+by Ionut-Vlad Modoranu, Mher Safaryan, Grigory Malinovsky, Eldar Kurtic, Thomas Robert, Peter Richtárik, and Dan Alistarh.
+<br>
+<span class="important">Poster</span><br>  
+<br>
+
+<b> 6) "Freya PAGE: First Optimal Time Complexity for Large-Scale Nonconvex Finite-Sum Optimization with Heterogeneous Asynchronous Computations"</b><br>
+<a href="https://arxiv.org/abs/2405.15545">[arXiv]</a>  <br>
+by Alexander Tyurin, Kaja Gruntkowska, and Peter Richtárik.
+<br>
+<span class="important">Poster</span><br>  
+<br>
+
+<b> 7) "Don't Compress Gradients in Random Reshuffling: Compress Gradient Differences"</b><br>
+<a href="https://arxiv.org/abs/2206.07021">[arXiv]</a>  <br>
+by Abdurakhmon Sadiev, Grigory Malinovsky, Eduard Gorbunov, Igor Sokolov, Ahmed Khaled, Konstantin Burlachenko, and Peter Richtárik.
+<br>
+<span class="important">Poster</span><br>  
+<br>
+
+<b> 8) "The Power of Extrapolation in Federated Learning"</b><br>
+<a href="https://arxiv.org/abs/2405.13766">[arXiv]</a>  <br>
+by Hanmin Li, Kirill Acharya, and Peter Richtárik.
+<br>
+<span class="important">Poster</span><br>  
+<br>
+
+<b> 9) "Byzantine Robustness and Partial Participation Can Be Achieved at Once: Just Clip Gradient Differences"</b><br>
+<a href="https://arxiv.org/abs/2311.14127">[arXiv]</a>  <br>
+by Grigory Malinovsky, Peter Richtárik, Samuel Horváth, and Eduard Gorbunov.
+<br>
+<span class="important">Poster</span><br>  
+<br>
+
+<b> 10) "Cohort Squeeze: Beyond a Single Communication Round per Cohort in Cross-Device Federated Learning"</b><br>
+<a href="https://arxiv.org/abs/2406.01115">[arXiv]</a>  <br>
+by Kai Yi, Timur Kharisov, Igor Sokolov, and Peter Richtárik.
+<br>
+<span class="important">FL Workshop Oral</span><br>  
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>October 2, 2024</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2409.14989">
+"On the Convergence of FedProx with Extrapolation and Inexact Prox"</a> -
+joint work with Hanmin Li.
+ <br>
+ <br>
+  
+Abstract: <i>Enhancing the FedProx federated learning algorithm (Li et al., 2020) with server-side extrapolation, Li et al. (2024a) recently introduced the FedExProx method. Their theoretical analysis, however, relies on the assumption that each client computes a certain proximal operator exactly, which is impractical since this is virtually never possible to do in real settings. In this paper, we investigate the behavior of FedExProx without this exactness assumption in the smooth and globally strongly convex setting. We establish a general convergence result, showing that inexactness leads to convergence to a neighborhood of the solution. Additionally, we demonstrate that, with careful control, the adverse effects of this inexactness can be mitigated. By linking inexactness to biased compression (Beznosikov et al., 2023), we refine our analysis, highlighting robustness of extrapolation to inexact proximal updates. We also examine the local iteration complexity required by each client to achieved the required level of inexactness using various local optimizers. Our theoretical insights are validated through comprehensive numerical experiments..</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>September 24, 2024</h3>
 
 <h1>New Paper</h1>
