--- a/i_papers.html
+++ b/i_papers.html
@@ -56,7 +56,7 @@
 [260] 
 Hanmin Li and Peter Richtárik<br>
 <b>On the convergence of FedProx with extrapolation and inexact prox</b><br>
-
+<span class="important">Federated Learning Paper</span><br>   
 [<a href="https://arxiv.org/abs/2410.01410">arXiv</a>] [method: FedExProx] <br><br> 
 
 [259] 
